--- a/package.json
+++ b/package.json
@@ -14,14 +14,15 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-navigation-menu": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "@react-three/fiber": "^8.16.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "dropzone": "6.0.0-beta.2",
     "framer-motion": "^11.3.22",
     "lucide-react": "^0.424.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-dropzone": "^14.3.5",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.0",
     "sonner": "^1.7.1",
